deploy/components/inference-gateway/envoy-filters.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: endpoint-picker
spec:
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      listener:
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
    patch:
      operation: INSERT_FIRST
      value:
        name: envoy.filters.http.ext_proc
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
          failure_mode_allow: false
          allow_mode_override: true
          processing_mode:
            request_header_mode: "SEND"
            response_header_mode: "SEND"
            request_body_mode: "BUFFERED"
            response_body_mode: "BUFFERED"
            request_trailer_mode: "SEND"
            response_trailer_mode: "SKIP"
          grpc_service:
            envoy_grpc:
              cluster_name: outbound|9080||endpoint-picker.REPLACE_NAMESPACE.svc.cluster.local
            timeout: 5s
